src/tests/snapshots/swayward__tests__window_opening__check_fullscreen_maximize@fsT-wmBU.snap
---
source: src/tests/window_opening.rs
description: "want maximized: BU\nconfig:\nwindow-rule {\n    open-fullscreen true\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
